src/Real-time Answer/objects/RealTimeAnswer__e.object
<CustomObject>
    <fields>
        <fullName>UserSentMessage__c</fullName>
        <label>UserSentMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatFollowerId__c</fullName>
        <label>WeChatFollowerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatMessageCreatedDate__c</fullName>
        <label>WeChatMessageCreatedDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatQRCodeId__c</fullName>
        <label>WeChatQRCodeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RealTimeAnswer</label>
    <pluralLabel>RealTimeAnswers</pluralLabel>
</CustomObject>